# appconfig-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: main.yml
appconf/: api.py  exceptions.py  main.py  models.py
tests/: conftest.py  test_api.py
tests/fixtures/: example.json
