[tool.poetry]
name = "appconfig-cli"
version = "0.1.0"
description = "Unofficial CLI tool for working with AWS AppConfig"
authors = ["Nick Snell <n@nicksnell.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "appconf"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.27.0"
click = "^8.1.3"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.277"
black = "^23.3.0"
pre-commit = "^3.3.3"

[tool.poetry.scripts]
appconf = "appconf.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
lin-length = 90

[tool.ruff]
line-length = 90
